--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:label="@string/title_activity_fullscreen"
             android:theme="@style/FullscreenTheme" >
         </activity>
+        <activity
+            android:name=".UsbUnlock"
+            android:label="@string/title_activity_usb_unlock" >
+        </activity>
     </application>
 
 </manifest>
